fix: Fix the bug where the viewer component is being broken when an image's height is too long

--- a/src/app/components/viewer/viewer.component.scss
+++ b/src/app/components/viewer/viewer.component.scss
@@ -11,6 +11,7 @@
     width: inherit;
     height: inherit;
     text-align: center;
+    overflow-y: auto;
 
     background-color: black;
 
